<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:scrollbars="vertical">

<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:scrollbars="vertical" > 

                <Button 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_camera"
                    android:text="@string/btn_camera_text"/>
                <Button 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_sized_camera"
                    android:text="@string/btn_sized_camera_text"/>
                <Button 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_sensor"
                    android:text="@string/btn_sensor_text"/>
               
            
                     <Button 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_mediaplayer"
                    android:text="@string/btn_mediaplayer_text"/>
                     <Button 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_mediastore"
                    android:text="@string/btn_mediastore_text"/>
                     <Button 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_sqlite"
                    android:text="@string/btn_sqlite_text"/>
              
                     <Button 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_phones"
                    android:text="@string/btn_phones_text"/>
                     <Button 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_video_view"
                    android:text="@string/btn_video_view_text"/>
                     <Button 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_player"
                    android:text="@string/btn_player_text"/>
                
                     <Button 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_qp"
                    android:text="@string/btn_qp_text"/>
                     <Button 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_gd"
                    android:text="@string/btn_gd_text"/>
                     <Button 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_web"
                    android:text="@string/btn_web_text"/>
                     
                     <Button 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_tele"
                    android:text="@string/btn_tele_text"/>
                     <Button 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_calllog"
                    android:text="通话记录"/>
                     <Button 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_allapp"
                    android:text="应用程序"/>
               
                     <Button 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_gps1"
                    android:text="GPS1"/>
                     <Button 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_gps2"
                    android:text="GPS2"/>
                     <Button 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_gps3"
                    android:text="GPS3"/>
                 
                     <Button 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_root"
                    android:text="ROOT"/>
                     
                     <Button 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_file"
                    android:text="SDCARD"/>
                     
                     <Button 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_viewpager"
                    android:text="ViewPager"/>
                     
                     <Button 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_fields"
                    android:text="Build Fields"/>
                     
                     <Button 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_httptest"
                    android:text="HTTP TEST"/>
                     
                     <Button 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_flashlight"
                    android:text="手电筒"/>
                     
                     <Button 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_timepicker"
                    android:text="time picker"/>
                     
                     <Button 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_trafficStats"
                    android:text="流量统计"/>
                     
                     <Button 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_volley"
                    android:text="volley test"/>
                     
                     <Button 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_am"
                    android:text="activitymanager"/>
                
                <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:orientation="horizontal"> 
                    <EditText
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>
                 </LinearLayout> 
            
                <ImageView 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/main_Image_view"
        android:contentDescription="@string/listItemImageViewDesc" ></ImageView>
    
</LinearLayout>

    
</ScrollView>